--- a/crimes.html
+++ b/crimes.html
@@ -38,7 +38,7 @@
     <!-- navbar section  -->
     <nav>
       <div class="container nav__container">
-        <a href="index.html"><h4>CyberSecurity Learning Portal</h4></a>
+        <a href="index.html"><h4>CipherAware.com</h4></a>
         <ul class="nav__menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="allCategories.html">Categories</a></li>
@@ -71,88 +71,59 @@
     </section>
 
     <section class="container experience__container laws mySwiper">
-      <h2>Laws for the cyber Cyber Security</h2>
+      <h2>Crimes</h2>
       <div class="container courses__container swiper-wrapper">
         <article class="course swiper-slide">
+          <div class="course_image">
+            <img src="./images/course7.jpg" alt="1" />
+          </div>
           <div class="course__info law">
-            <h4>Section 43A and 72A of the Information Technology Act</h4>
+            <h4>Phishing</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
             </p>
             <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
           </div>
         </article>
 
         <article class="course swiper-slide">
+          <div class="course_image">
+            <img src="./images/course8.jpg" alt="1" />
+          </div>
           <div class="course__info law">
-            <h4>Indian Penal Code (IPC) Sections 65, 66, and 66C</h4>
+            <h4>Malware</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
             </p>
             <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
           </div>
         </article>
 
         <article class="course swiper-slide">
+          <div class="course_image">
+            <img src="./images/course9.jpg" alt="1" />
+          </div>
           <div class="course__info law">
-            <h4>Information Technology Act, 2000</h4>
+            <h4>Ransomware</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
             </p>
             <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
           </div>
         </article>
 
         <article class="course swiper-slide">
+          <div class="course_image">
+            <img src="./images/course10.jpg" alt="1" />
+          </div>
             <div class="course__info law">
-              <h4>National Cyber Security Policy, 2013</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
-              </p>
-              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
-            </div>
-          </article>
-
-          <article class="course swiper-slide">
-            <div class="course__info law">
-              <h4>Cyber Appellate Tribunal (CAT)</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
-              </p>
-              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
-            </div>
-          </article>
-
-          <article class="course swiper-slide">
-            <div class="course__info law">
-              <h4>Ransomware Law Draft (proposed)</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
-              </p>
-              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
-            </div>
-          </article>
-
-          <article class="course swiper-slide">
-            <div class="course__info law">
-              <h4>Section 66D of the Information Technology Act</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
-              </p>
-              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
-            </div>
-          </article>
-
-          <article class="course swiper-slide">
-            <div class="course__info law">
-              <h4>Section 66D of the Information Technology Act</h4>
+              <h4>Hacking</h4>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
@@ -163,8 +134,71 @@
           </article>
 
           <article class="course swiper-slide">
+            <div class="course_image">
+              <img src="./images/course11.jpg" alt="1" />
+            </div>
             <div class="course__info law">
-              <h4>Section 67 of the Information Technology Act6+</h4>
+              <h4>Identity Theft</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
+              </p>
+              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
+            </div>
+          </article>
+
+          <article class="course swiper-slide">
+            <div class="course_image">
+              <img src="./images/course12.jpg" alt="1" />
+            </div>
+            <div class="course__info law">
+              <h4>Distributed Denial of Service (DDoS) Attacks</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
+              </p>
+              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
+            </div>
+          </article>
+
+          <article class="course swiper-slide">
+            <div class="course_image">
+              <img src="./images/course13.jpg" alt="1" />
+            </div>
+            <div class="course__info law">
+              <h4>Cyberbullying</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
+              </p>
+              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
+            </div>
+          </article>
+
+          <article class="course swiper-slide">
+            <div class="course_image">
+              <img src="./images/course14.jpg" alt="1" />
+            </div>
+            <div class="course__info law">
+              <h4>Online Fraud</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
+              </p>
+              <a href="ruleblog.html" class="btn btn-primary">Learn More</a>
+
+            </div>
+          </article>
+
+          <article class="course swiper-slide">
+            <div class="course_image">
+              <img src="./images/course14.jpg" alt="1" />
+            </div>
+            <div class="course__info law">
+              <h4>Data Breaches</h4>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Adipisci, enim. Maxime temporibus iusto inventore dolores fuga.
@@ -242,7 +276,6 @@
     </footer>
 
     <script src="script123.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
