--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
@@ -25,12 +26,14 @@
     <!-- navbar section  -->
     <nav>
       <div class="container nav__container">
-        <a href="index.html"><h4>CyberSecurity Learning Portal</h4></a>
+        <a href="index.html"><h4>CipherAware.com</h4></a>
         <ul class="nav__menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="laws.html">Laws</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li><a href="allCategories.html">Categories</a></li>
+          <li><a href="courses1.html">Courses</a></li>
+          <li><a href="forum.html">Forum</a></li>
+          <li><a href="in.html">G_Learn</a></li>
+          <li><a href="contact.html"><i class="uil uil-user"></i></a></li>
         </ul>
 
         <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
@@ -38,7 +41,68 @@
       </div>
     </nav>
 
-    <section class="about__achievements">
+    <section id="about-home">
+      <h2>About CyberSecurity</h2>
+    </section>
+
+    <section id="about-container">
+
+      <div class="about-img">
+        <img src="./images/about achievements.svg" alt="">
+      </div>
+
+      <div class="about-text">
+        <h2>Welcome to the CyberSecurity e learning platform</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquam tenetur commodi. Id provident nisi accusantium sit.</p>
+        <div class="about-fe">
+          <img src="./images/fe1.png" alt="">
+          <div class="fe-text">
+            <h4>45+ security teams</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, excepturi!</p>
+          </div>
+        </div>
+        <div class="about-fe">
+          <img src="./images/trust (6).png" alt="">
+          <div class="fe-text">
+            <h4>1000+ security measures</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, excepturi!</p>
+          </div>
+        </div>
+        <div class="about-fe">
+          <img src="./images/fe2.png" alt="">
+          <div class="fe-text">
+            <h4>latest courses</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, excepturi!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+    <section id="features">
+      <h1>Awesome features</h1>
+      <p>Replenish man have thing gathering lights yielding shall you</p>
+      <div class="fea-base">
+        <div class="fea-box">
+          <i class="fa-solid fa-trophy"></i>
+          <h3>Gamified Learning the security</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam impedit consequatur dolore porro sed. Dignissimos.</p>
+        </div>
+
+        <div class="fea-box">
+          <i class="fa-solid fa-cloud"></i>
+          <h3>Public Experience in experience</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam impedit consequatur dolore porro sed. Dignissimos.</p>
+        </div>
+
+        <div class="fea-box">
+          <i class="fa-brands fa-rocketchat"></i>
+          <h3>Interactive chatbot</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam impedit consequatur dolore porro sed. Dignissimos.</p>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="about__achievements">
       <div class="container about__achievements-container">
         <div class="about__achievements-left">
           <img src="./images/about achievements.svg" alt="achievements" />
@@ -205,46 +269,49 @@
           </div>
         </article>
       </div>
-    </section>
+    </section> -->
 
     <footer>
-      <div class="container footer__container">
-        <div class="footer__1">
-          <a href="index.html" class="footer__logo"
-            ><h4>CyberSecurity Learning Portal</h4></a
-          >
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere,
-            aliquam.
-          </p>
-        </div>
+      <div class="footer1-col">
+        <h3>Top Products</h3>
+        <li>Manage Reputation</li>
+        <li>Power Tools</li>
+        <li>Managed Website</li>
+        <li>Security Service</li>
+      </div>
 
-        <div class="footer__2">
-          <h4>Links</h4>
-          <ul class="links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="laws.html">Laws</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
+      <div class="footer1-col">
+        <h3>Quick Links</h3>
+        <li>Jobs</li>
+        <li>investor Relations</li>
+        <li>Brand Assets</li>
+        <li>Terms of services</li>
+      </div>
 
-        <div class="footer__3">
-          <h4>Privacy</h4>
-          <ul class="privacy">
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms and conditions</a></li>
-            <li><a href="#">Refund Policy</a></li>
-          </ul>
-        </div>
+      <div class="footer1-col">
+        <h3>Features</h3>
+        <li>Manage Reputation</li>
+        <li>Power Tools</li>
+        <li>Managed Website</li>
+        <li>Security Service</li>
+      </div>
 
+      <div class="footer1-col">
+        <h3>Resources</h3>
+        <li>Guides</li>
+        <li>Research</li>
+        <li>Experts</li>
+        <li>Security services</li>
+      </div>
+
+      <div class="footer1-col">
+        <h3>Newsletter</h3>
+        <p>You can trust us . we only send security measures,</p>
+        <div class="subscribe">
+          <input type="text" placeholder="Your Email address" />
+          <a href="#" class="yellow">SUBSCRIBE</a>
+        </div>
         <div class="footer__4">
-          <h4>Contact Us</h4>
-          <div>
-            <p>+91 072 897 293</p>
-            <p>CyberSecurity@gmail.com</p>
-          </div>
-
           <ul class="footer__socials">
             <li>
               <a href="#"><i class="uil uil-facebook-f"></i></a>
@@ -261,11 +328,12 @@
           </ul>
         </div>
       </div>
-      <div class="footer__copyright">
-        <small>Copyright &copy; CyberSecurity Learning Portal</small>
+
+      <div class="copyright">
+        <p>Copyright &copy; CyberSecurity Learning Portal</p>
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script123.js"></script>
   </body>
 </html>
