--- a/forum.html
+++ b/forum.html
@@ -13,8 +13,6 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/contact.css" />
-    <link rel="stylesheet" href="./css/ruleblog.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +33,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="allCategories.html">Categories</a></li>
           <li><a href="courses1.html">Courses</a></li>
-          <li><a href="forum1234.html">Forum</a></li>
+          <li><a href="forum.html">Forum</a></li>
           <li><a href="in.html">G_Learn</a></li>
           <li><a href="contact.html"><i class="uil uil-user"></i></a></li>
         </ul>
@@ -45,59 +43,8 @@
       </div>
     </nav>
 
-    <section id="about-home">
-      <h2>Contact Us /</h2>
-    </section>
     
-    <section class="contact">
-        <div class="container contact__container">
-            <aside class="contact__aside">
-                <div class="aside__image">
-                    <img src="./images/contact.svg" alt="contact">
-                </div>
-                <h2>Contact Us</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam libero, quos in deleniti quaerat error!</p>
-                <ul class="contact__details">
-                    <li>
-                        <i class="uil uil-times"></i>
-                        <h5>+91 584 747  477</h5>
-                    </li>
-                    <li>
-                        <i class="uil uil-envelope"></i>
-                        <h5>support@gmail.com</h5>
-                    </li>
-                    <li>
-                        <i class="uil uil-location-point"></i>
-                        <h5>delhi gurugram</h5>
-                    </li>
-                </ul>
-                <ul class="contact__socials">
-                    <li> <a href="https://facebook.com"><i class="uil uil-facebook-f"></i></a></li>
-                    <li> <a href="https://instagram.com"><i class="uil uil-instagram"></i></a></li>
-                    <li> <a href="https://twitter.com"><i class="uil uil-twitter"></i></a></li>
-                    <li> <a href="https://linkedin.com"><i class="uil uil-linkedin-alt"></i></a></li>
-                </ul>
-            </aside>
-            <form action="https://formspree.io/f/xeqnevgj" method="POST" class="contact__form">
-            <h2 style="margin-bottom: 5px; margin-top: -2rem;">Lets connnect Us</h2>
-                <div class="form__name">
-                    <input type="text" name="First Name" placeholder="First Name" required>
-                    <input type="text" name="Last Name" placeholder="Last Name" required>
-                </div>
-                <input type="email" name="Email Address" placeholder="Your Email Address" required>
-                <textarea name="Message" rows="7" placeholder="Message" required></textarea>
-                <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <h2 style="text-align: center;">Get Our location on Map</h2>
-
-    <section id="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3429.805816439602!2d76.80952467503721!3d30.723858986062442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fed279ad770e1%3A0x8974f1dab3de9f03!2sPolice%20Lines%20Chandigarh!5e0!3m2!1sen!2sin!4v1700187898437!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
-
-
+    
     <footer>
       <div class="footer1-col">
         <h3>Top Products</h3>
@@ -160,8 +107,9 @@
         <p>Copyright &copy; CyberSecurity Learning Portal</p>
       </div>
     </footer>
+  
+    <script src="script123.js"></script>
 
-  <script src="script123.js"></script>
-
-</body>
-</html>
+    </body>
+  </html>
+  
